{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 92,
  "lineage": "94f42050-b2d4-9f3e-1bcd-633f56fd1e0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:458616237640:instance/i-0574ede3078cecbc4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0574ede3078cecbc4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "node_exporter",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0edce016ebecc1817",
            "private_dns": "ip-192-168-0-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.204",
            "public_dns": "ec2-18-232-120-55.compute-1.amazonaws.com",
            "public_ip": "18.232.120.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ad10b4c5caa75ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07368daa75683a0de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a673691bf4163c6c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07368daa75683a0de"
            ]
          },
          "dependencies": [
            "aws_security_group.SCG",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_vlan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458616237640:internet-gateway/igw-0a00cc556c3857aad",
            "id": "igw-0a00cc556c3857aad",
            "owner_id": "458616237640",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            },
            "vpc_id": "vpc-0cd72364d88c9f3bb"
          },
          "dependencies": [
            "aws_vpc.vpc_vlan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458616237640:route-table/rtb-01977b247db7c0f25",
            "id": "rtb-01977b247db7c0f25",
            "owner_id": "458616237640",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a00cc556c3857aad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd72364d88c9f3bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.vpc_vlan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routo_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1a14c8ec9e38b7c",
            "route_table_id": "rtb-01977b247db7c0f25",
            "subnet_id": "subnet-0a673691bf4163c6c"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.RTB",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_vlan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SCG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458616237640:security-group/sg-07368daa75683a0de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07368daa75683a0de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow all",
            "name_prefix": "",
            "owner_id": "458616237640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd72364d88c9f3bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_vlan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458616237640:subnet/subnet-0a673691bf4163c6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a673691bf4163c6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458616237640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            },
            "vpc_id": "vpc-0cd72364d88c9f3bb"
          },
          "dependencies": [
            "aws_vpc.vpc_vlan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_vlan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458616237640:vpc/vpc-0cd72364d88c9f3bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-08f615ad94bdc1f0d",
            "default_route_table_id": "rtb-0e76f729c37f847e2",
            "default_security_group_id": "sg-05cb01c69afb64043",
            "dhcp_options_id": "dopt-0fde278aabc368e3f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd72364d88c9f3bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e76f729c37f847e2",
            "owner_id": "458616237640",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            }
          }
        }
      ]
    }
  ]
}